fix: add viewport meta to display on mobile devices

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -428,11 +428,6 @@ body
   height: 100%
   margin: 0 auto -60px
 
-.container
-  width:auto
-  max-width: 100%
-  padding: 0 15px
-
 #push
   postion: absolute
   bottom: 0
